fix: resolve horizontal scrolling by correcting grid span and adding overflow-x: hidden

--- a/_sass/layout/_page.scss
+++ b/_sass/layout/_page.scss
@@ -8,6 +8,7 @@
   margin-top: 2em;
   padding-left: 0.25em;
   padding-right: 0.25em;
+  overflow-x: hidden;
   animation: intro 0.3s both;
   animation-delay: 0.35s;
 
@@ -18,9 +19,8 @@
 
 .page {
   @include breakpoint($large) {
-    @include span(10 of 12 last);
+    @include span(9.5 of 12 last);
     @include prefix(0.5 of 12);
-    @include suffix(2 of 12);
   }
 
   .page__inner-wrap {
